--- a/app/locales/hi-IN.json
+++ b/app/locales/hi-IN.json
@@ -1,111 +1,134 @@
 {
-    "pages": {
-        "index": {
-            "title": "अपने डेटा को अपलोड करें"
-        }
-    },
     "components": {
         "chatInterface": {
             "placeholder": "अपना संदेश लिखें..."
         },
+        "clickMenu": {
+            "showForm": "डेटा फ़ॉर्म दिखाएँ",
+            "showChat": "चैट इंटरफ़ेस दिखाएँ"
+        },
         "fileUpload": {
-            "upload": "फाइल चुनें या यहाँ खींचें",
+            "title": "अपने डेटा अपलोड करें",
+            "upload": "फ़ाइल चुनें या यहां खींचें",
             "lastLoaded": "अंतिम बार लोड किया गया"
         },
         "header": {
             "settings": "सेटिंग्स"
         },
         "optionalFields": {
-            "heartRate": "औसत हृदय दर",
-            "bloodPressure": "रक्तचाप (सिस्टोल / डायस्टोल)",
-            "sports": "खेल गतिविधियाँ",
-            "medications": "नियमित दवाइयाँ",
-            "chronicDiseases": "पुरानी बीमारियाँ",
+            "heartRate": "हृदय गति",
+            "placeholderHeartRate": "अपनी हृदय गति दर्ज करें",
+            "bloodPressure": "रक्तचाप",
+            "placeholderBloodPressure": "अपना रक्तचाप दर्ज करें, जैसे: 120/80",
+            "sports": "खेल",
+            "placeholderSports": "आप कौन-कौन से खेल खेलते हैं?",
+            "medications": "दवाइयाँ",
+            "placeholderMedications": "अपनी दवाइयाँ दर्ज करें",
+            "chronicDiseases": "दीर्घकालिक रोग",
+            "placeholderChronicDiseases": "अपने दीर्घकालिक रोग दर्ज करें",
             "allergies": "एलर्जी",
-            "diet": "आहार संबंधी आदतें",
-            "waterIntake": "दैनिक पानी का सेवन (लीटर)",
-            "familyHistory": "परिवार का चिकित्सा इतिहास",
+            "placeholderAllergies": "अपनी एलर्जी दर्ज करें",
+            "diet": "आहार",
+            "placeholderDiet": "अपना आहार दर्ज करें",
+            "waterIntake": "दैनिक पानी की खपत (लीटर)",
+            "placeholderWaterIntake": "अपनी दैनिक पानी की खपत दर्ज करें",
+            "familyHistory": "पारिवारिक इतिहास",
+            "placeholderFamilyHistory": "अपना पारिवारिक इतिहास दर्ज करें",
             "smoking": "धूम्रपान",
-            "alcohol": "शराब का सेवन",
-            "sleep": "दैनिक नींद की अवधि (घंटे)",
-            "medicalRecords": "शिकायतें / लक्षण",
-            "medicalHistory": "चिकित्सा इतिहास",
             "smokingOptions": {
                 "never": "कभी नहीं",
                 "occasionally": "कभी-कभी",
                 "regularly": "नियमित रूप से"
             },
+            "selectPlaceholder": "चयन करें",
+            "alcohol": "शराब का सेवन",
             "alcoholOptions": {
                 "never": "कभी नहीं",
                 "occasionally": "कभी-कभी",
                 "regularly": "नियमित रूप से"
             },
-            "selectPlaceholder": "दिया नहीं गया",
-            "placeholderHeartRate": "उदाहरण: 72",
-            "placeholderBloodPressure": "उदाहरण: 120/80",
-            "placeholderSports": "उदाहरण: दौड़ना, तैरना, जिम",
-            "placeholderMedications": "उदाहरण: एस्पिरिन, एल-थाइरोक्सिन",
-            "placeholderChronicDiseases": "उदाहरण: मधुमेह",
-            "placeholderAllergies": "उदाहरण: पेनिसिलिन, पराग",
-            "placeholderDiet": "उदाहरण: शाकाहारी, कीटो",
-            "placeholderWaterIntake": "उदाहरण: 2.5",
-            "placeholderFamilyHistory": "उदाहरण: हृदय रोग",
-            "placeholderSleep": "उदाहरण: 7.5",
-            "placeholderMedicalRecords": "उदाहरण: अक्सर सिरदर्द",
-            "placeholderMedicalHistory": "पिछली बीमारियाँ"
+            "sleep": "नींद (घंटे/दिन)",
+            "placeholderSleep": "अपनी दैनिक नींद का समय दर्ज करें",
+            "physicalActivityLevel": "शारीरिक गतिविधि स्तर",
+            "placeholderPhysicalActivityLevel": "अपना गतिविधि स्तर दर्ज करें",
+            "workType": "कार्य का प्रकार",
+            "placeholderWorkType": "अपना कार्य प्रकार दर्ज करें",
+            "stressLevel": "तनाव स्तर",
+            "placeholderStressLevel": "अपना तनाव स्तर दर्ज करें",
+            "mentalHealth": "मानसिक स्वास्थ्य",
+            "placeholderMentalHealth": "अपनी मानसिक स्थिति दर्ज करें",
+            "cholesterolLevel": "कोलेस्ट्रॉल स्तर",
+            "placeholderCholesterolLevel": "अपना कोलेस्ट्रॉल स्तर दर्ज करें",
+            "bloodSugarLevel": "रक्त शर्करा स्तर",
+            "placeholderBloodSugarLevel": "अपना रक्त शर्करा स्तर दर्ज करें",
+            "supplements": "पूरक आहार",
+            "placeholderSupplements": "अपने पूरक आहार दर्ज करें",
+            "vaccinations": "टीकाकरण",
+            "placeholderVaccinations": "अपने टीकाकरण दर्ज करें",
+            "reproductiveHealth": "प्रजनन स्वास्थ्य",
+            "placeholderReproductiveHealth": "अपना प्रजनन स्वास्थ्य दर्ज करें",
+            "visionAndHearing": "दृष्टि और श्रवण",
+            "placeholderVisionAndHearing": "अपनी दृष्टि और श्रवण समस्याएँ दर्ज करें",
+            "sleepQuality": "नींद की गुणवत्ता",
+            "placeholderSleepQuality": "अपनी नींद की गुणवत्ता दर्ज करें",
+            "medicalRecords": "चिकित्सा रिकॉर्ड",
+            "placeholderMedicalRecords": "अपने चिकित्सा रिकॉर्ड दर्ज करें",
+            "medicalHistory": "चिकित्सा इतिहास",
+            "placeholderMedicalHistory": "अपना चिकित्सा इतिहास दर्ज करें"
         },
         "privacyModal": {
             "title": "हमारी गोपनीयता नीति",
-            "text1": "आप द्वारा प्रदान किए गए डेटा का उपयोग केवल स्वास्थ्य सलाहकार प्रणाली द्वारा किया जाएगा, और इसे तीसरे पक्ष के साथ साझा नहीं किया जाएगा। आपके डेटा को सिस्टम में संग्रहित नहीं किया जाएगा, आप उन्हें प्रबंधित कर सकते हैं और अपने डिवाइस पर सहेज सकते हैं।",
-            "text2": "गोपनीयता नीति की स्वीकृति से आप सहमत होते हैं कि हमारी प्रणाली आपके द्वारा प्रदान की गई जानकारी के आधार पर सलाह देगी।"
+            "text1": "आपके द्वारा प्रदान किए गए डेटा का उपयोग केवल स्वास्थ्य सलाह प्रणाली द्वारा किया जाएगा और इसे किसी तीसरे पक्ष के साथ साझा नहीं किया जाएगा। आपका डेटा संग्रहीत नहीं किया जाएगा; आप स्वयं इसे प्रबंधित और अपने डिवाइस पर सहेज सकते हैं।",
+            "text2": "गोपनीयता नीति को स्वीकार करके, आप सहमति देते हैं कि हमारा सिस्टम आपके द्वारा प्रदान की गई जानकारी के आधार पर सलाह दे।"
         },
         "response": {
-            "title": "डॉ. सनोवाइज़ का उत्तर:",
+            "title": "डॉ. Sanovise का उत्तर:",
             "analyzing": "डेटा का विश्लेषण कर रहा हूँ 📚🧠",
             "thinking": "सोच रहा हूँ 🤔"
         },
         "settingsModal": {
             "title": "सेटिंग्स",
-            "text": "अपनी पसंदीदा भाषा चुनें:"
+            "selectLanguage": "अपनी पसंदीदा भाषा चुनें:",
+            "selectAIModel": "अपना पसंदीदा एआई मॉडल चुनें:"
         },
         "userForm": {
-            "requiredInfo": "जो <span class='required'>*</span> चिह्नित फ़ील्ड हैं, उन्हें भरना अनिवार्य है!",
+            "requiredInfo": "<span class='required'>*</span> चिह्नित फ़ील्ड भरना अनिवार्य है!",
             "birthDate": "जन्म तिथि",
             "gender": "लिंग",
             "selectGender": "लिंग चुनें",
             "male": "पुरुष",
             "female": "महिला",
-            "height": "ऊँचाई",
+            "height": "कद",
             "weight": "वजन",
-            "placeholderHeight": "उदाहरण: 175",
-            "placeholderWeight": "उदाहरण: 70",
-            "showExtra": "अधिक जानकारी दिखाएं",
-            "hideExtra": "अधिक जानकारी छुपाएं",
+            "placeholderHeight": "जैसे: 175",
+            "placeholderWeight": "जैसे: 70",
+            "showExtra": "अतिरिक्त जानकारी दर्ज करें",
+            "hideExtra": "अतिरिक्त जानकारी छुपाएँ",
             "acceptPrivacy": "मैं स्वीकार करता हूँ",
             "privacyLink": "गोपनीयता नीति",
-            "submitData": "डेटा भेजें",
-            "abort": "उत्तर न दें",
+            "submitData": "डेटा सबमिट करें",
+            "abort": "उत्तर रद्द करें",
             "exportData": "डेटा निर्यात करें",
-            "invalidHeight": "ऊँचाई 50 सेमी और 300 सेमी के बीच होनी चाहिए।",
-            "invalidWeight": "वजन 1 किलोग्राम और 500 किलोग्राम के बीच होना चाहिए।",
-            "invalidWaterIntake": "दैनिक पानी का सेवन 0 और 50 लीटर के बीच होना चाहिए।",
-            "invalidHeartRate": "हृदय दर 30 और 250 के बीच होनी चाहिए।",
-            "invalidSleep": "नींद का समय 0 और 24 घंटे के बीच होना चाहिए।",
-            "invalidBloodPressure": "रक्तचाप का प्रारूप 'सिस्टोल/डायस्टोल' (जैसे: 120/80) होना चाहिए।"
+            "invalidHeight": "कद 50 सेमी से 300 सेमी के बीच होना चाहिए।",
+            "invalidWeight": "वजन 1 किग्रा से 500 किग्रा के बीच होना चाहिए।",
+            "invalidWaterIntake": "दैनिक पानी की खपत 0 से 50 लीटर के बीच होनी चाहिए।",
+            "invalidHeartRate": "हृदय गति 30 से 250 के बीच होनी चाहिए।",
+            "invalidSleep": "नींद का समय 0 से 24 घंटे के बीच होना चाहिए।",
+            "invalidBloodPressure": "रक्तचाप का प्रारूप इस तरह होना चाहिए: सिस्टोलिक/डायस्टोलिक (जैसे: 120/80)।"
         }
     },
     "global": {
         "successSave": "सफलतापूर्वक सहेजा गया",
-        "successShare": "सफलतापूर्वक साझा किया गया",
-        "errorSave": "सहेजने में एक त्रुटि हुई।",
-        "errorSend": "डेटा भेजने में एक त्रुटि हुई",
-        "tryAgain": "कृपया बाद में पुनः प्रयास करें या पृष्ठ को रिफ्रेश करें।",
-        "emptyResponse": "सर्वर से कोई प्रतिक्रिया नहीं मिली। शायद कुछ गड़बड़ हो गई हो।",
+        "successShare": "सफलतापूर्वक भेजा गया",
+        "errorSave": "डेटा सहेजते समय त्रुटि हुई।",
+        "errorSend": "डेटा भेजते समय त्रुटि हुई।",
+        "tryAgain": "कृपया बाद में पुनः प्रयास करें या पृष्ठ को रीफ्रेश करें।",
+        "emptyResponse": "सर्वर ने कोई उत्तर नहीं भेजा। संभवतः कुछ समस्या हुई है।",
         "networkError": "नेटवर्क त्रुटि – कृपया अपना इंटरनेट कनेक्शन जांचें!",
-        "unknownError": "अज्ञात त्रुटि हुई। 😔",
-        "errorLoad": "फाइल में वैध डेटा नहीं है!",
-        "invalidJson": "अमान्य फाइल प्रारूप! कृपया सुनिश्चित करें कि आपने JSON फाइल अपलोड की है।",
-        "anotherFile": "कृपया पुनः प्रयास करें या कोई अन्य फाइल चुनें।",
-        "hi-IN": "कृपया स्टोरेज तक पहुंच की अनुमति दें।"
+        "unknownError": "एक अज्ञात त्रुटि हुई। 😔",
+        "errorLoad": "फ़ाइल में वैध डेटा नहीं है!",
+        "invalidJson": "फ़ाइल प्रारूप अमान्य है! कृपया सुनिश्चित करें कि आपने एक JSON फ़ाइल अपलोड की है।",
+        "anotherFile": "कृपया पुनः प्रयास करें या दूसरी फ़ाइल चुनें।",
+        "needPermission": "कृपया स्टोरेज एक्सेस की अनुमति दें।"
     }
 }
