--- a/app/locales/ru-RU.json
+++ b/app/locales/ru-RU.json
@@ -1,75 +1,98 @@
 {
-    "pages": {
-        "index": {
-            "title": "Загрузите ваши данные"
-        }
-    },
     "components": {
         "chatInterface": {
             "placeholder": "Введите ваше сообщение..."
         },
+        "clickMenu": {
+            "showForm": "Показать форму ввода данных",
+            "showChat": "Показать интерфейс чата"
+        },
         "fileUpload": {
+            "title": "Загрузите ваши данные",
             "upload": "Выберите файл или перетащите его сюда",
-            "lastLoaded": "Последний раз загружено"
+            "lastLoaded": "Последняя загрузка"
         },
         "header": {
             "settings": "Настройки"
         },
         "optionalFields": {
-            "heartRate": "Средний пульс",
-            "bloodPressure": "Артериальное давление (систола/диастола)",
-            "sports": "Спортивные активности",
-            "medications": "Регулярно принимаемые лекарства",
+            "heartRate": "Пульс",
+            "placeholderHeartRate": "Введите ваш пульс",
+            "bloodPressure": "Артериальное давление",
+            "placeholderBloodPressure": "Введите давление, например: 120/80",
+            "sports": "Виды спорта",
+            "placeholderSports": "Какими видами спорта вы занимаетесь?",
+            "medications": "Медикаменты",
+            "placeholderMedications": "Введите принимаемые лекарства",
             "chronicDiseases": "Хронические заболевания",
+            "placeholderChronicDiseases": "Введите хронические заболевания",
             "allergies": "Аллергии",
-            "diet": "Пищевые привычки",
-            "waterIntake": "Ежедневное потребление воды (литры)",
-            "familyHistory": "Семейный анамнез",
+            "placeholderAllergies": "Введите ваши аллергии",
+            "diet": "Диета",
+            "placeholderDiet": "Введите вашу диету",
+            "waterIntake": "Суточное потребление воды (литры)",
+            "placeholderWaterIntake": "Введите суточное потребление воды",
+            "familyHistory": "Семейная история болезней",
+            "placeholderFamilyHistory": "Введите семейную историю",
             "smoking": "Курение",
-            "alcohol": "Употребление алкоголя",
-            "sleep": "Ежедневное время сна (часы)",
-            "medicalRecords": "Жалобы / Симптомы",
-            "medicalHistory": "Медицинская история",
             "smokingOptions": {
                 "never": "Никогда",
                 "occasionally": "Иногда",
                 "regularly": "Регулярно"
             },
+            "selectPlaceholder": "Выберите",
+            "alcohol": "Употребление алкоголя",
             "alcoholOptions": {
                 "never": "Никогда",
                 "occasionally": "Иногда",
                 "regularly": "Регулярно"
             },
-            "selectPlaceholder": "Не указано",
-            "placeholderHeartRate": "например: 72",
-            "placeholderBloodPressure": "например: 120/80",
-            "placeholderSports": "например: бег, плавание, тренажерный зал",
-            "placeholderMedications": "например: аспирин, Л-тироксин",
-            "placeholderChronicDiseases": "например: диабет",
-            "placeholderAllergies": "например: пенициллин, пыльца",
-            "placeholderDiet": "например: вегетарианец, кето",
-            "placeholderWaterIntake": "например: 2.5",
-            "placeholderFamilyHistory": "например: сердечные заболевания",
-            "placeholderSleep": "например: 7.5",
-            "placeholderMedicalRecords": "например: частые головные боли",
-            "placeholderMedicalHistory": "Предыдущие заболевания"
+            "sleep": "Сон (часы в день)",
+            "placeholderSleep": "Введите продолжительность сна",
+            "physicalActivityLevel": "Уровень физической активности",
+            "placeholderPhysicalActivityLevel": "Введите ваш уровень активности",
+            "workType": "Тип работы",
+            "placeholderWorkType": "Введите тип вашей работы",
+            "stressLevel": "Уровень стресса",
+            "placeholderStressLevel": "Введите уровень вашего стресса",
+            "mentalHealth": "Психическое здоровье",
+            "placeholderMentalHealth": "Введите состояние психического здоровья",
+            "cholesterolLevel": "Уровень холестерина",
+            "placeholderCholesterolLevel": "Введите уровень холестерина",
+            "bloodSugarLevel": "Уровень сахара в крови",
+            "placeholderBloodSugarLevel": "Введите уровень сахара в крови",
+            "supplements": "Пищевые добавки",
+            "placeholderSupplements": "Введите принимаемые добавки",
+            "vaccinations": "Прививки",
+            "placeholderVaccinations": "Введите сделанные прививки",
+            "reproductiveHealth": "Репродуктивное здоровье",
+            "placeholderReproductiveHealth": "Введите информацию о репродуктивном здоровье",
+            "visionAndHearing": "Зрение и слух",
+            "placeholderVisionAndHearing": "Введите проблемы со зрением и слухом",
+            "sleepQuality": "Качество сна",
+            "placeholderSleepQuality": "Введите качество сна",
+            "medicalRecords": "Медицинские записи",
+            "placeholderMedicalRecords": "Введите ваши медицинские записи",
+            "medicalHistory": "Медицинская история",
+            "placeholderMedicalHistory": "Введите вашу медицинскую историю"
         },
         "privacyModal": {
-            "title": "Политика конфиденциальности",
-            "text1": "Предоставленные вами данные используются исключительно системой здравоохранения и не передаются третьим лицам. Ваши данные не сохраняются системой; вы можете ими управлять и сохранять их на вашем устройстве.",
-            "text2": "Приняв условия конфиденциальности, вы соглашаетесь на то, что наша система будет давать рекомендации на основе предоставленных вами данных."
+            "title": "Наша политика конфиденциальности",
+            "text1": "Предоставленные вами данные будут использоваться только системой консультации по вопросам здоровья и не будут переданы третьим лицам. Ваши данные не будут сохраняться; вы сможете управлять ими и хранить их на своём устройстве.",
+            "text2": "Принимая политику конфиденциальности, вы соглашаетесь на использование предоставленной вами информации для предоставления рекомендаций."
         },
         "response": {
-            "title": "Ответ от Dr. Sanovise:",
+            "title": "Ответ Dr. Sanovise:",
             "analyzing": "Анализирую данные 📚🧠",
             "thinking": "Думаю 🤔"
         },
         "settingsModal": {
             "title": "Настройки",
-            "text": "Выберите предпочитаемый язык:"
+            "selectLanguage": "Выберите предпочитаемый язык:",
+            "selectAIModel": "Выберите предпочитаемую модель ИИ:"
         },
         "userForm": {
-            "requiredInfo": "Поля, помеченные <span class='required'>*</span>, обязательны для заполнения!",
+            "requiredInfo": "Поля, отмеченные <span class='required'>*</span>, обязательны для заполнения!",
             "birthDate": "Дата рождения",
             "gender": "Пол",
             "selectGender": "Выберите пол",
@@ -79,33 +102,33 @@
             "weight": "Вес",
             "placeholderHeight": "например: 175",
             "placeholderWeight": "например: 70",
-            "showExtra": "Показать дополнительные поля",
-            "hideExtra": "Скрыть дополнительные поля",
+            "showExtra": "Заполнить дополнительную информацию",
+            "hideExtra": "Скрыть дополнительную информацию",
             "acceptPrivacy": "Я принимаю",
             "privacyLink": "политику конфиденциальности",
             "submitData": "Отправить данные",
-            "abort": "Не отвечать",
-            "exportData": "Экспорт данных",
+            "abort": "Отменить ответ",
+            "exportData": "Экспортировать данные",
             "invalidHeight": "Рост должен быть от 50 см до 300 см.",
             "invalidWeight": "Вес должен быть от 1 кг до 500 кг.",
-            "invalidWaterIntake": "Ежедневное потребление воды должно быть от 0 до 50 литров.",
-            "invalidHeartRate": "Пульс должен быть от 30 до 250.",
-            "invalidSleep": "Время сна должно быть от 0 до 24 часов.",
-            "invalidBloodPressure": "Давление должно быть в следующем формате: систола/диастола (например: 120/80)."
+            "invalidWaterIntake": "Потребление воды должно быть от 0 до 50 литров в день.",
+            "invalidHeartRate": "Пульс должен быть в диапазоне от 30 до 250.",
+            "invalidSleep": "Продолжительность сна должна быть от 0 до 24 часов.",
+            "invalidBloodPressure": "Формат давления должен быть систолическое/диастолическое (например: 120/80)."
         }
     },
     "global": {
         "successSave": "Успешно сохранено",
         "successShare": "Успешно отправлено",
-        "errorSave": "Ошибка при сохранении.",
-        "errorSend": "Ошибка при отправке данных.",
-        "tryAgain": "Пожалуйста, попробуйте снова позже или обновите страницу.",
-        "emptyResponse": "Сервер не отправил ответ. Возможно, произошел сбой.",
-        "networkError": "Ошибка сети — проверьте ваше интернет-соединение!",
+        "errorSave": "Произошла ошибка при сохранении данных.",
+        "errorSend": "Произошла ошибка при отправке данных.",
+        "tryAgain": "Попробуйте позже или перезагрузите страницу.",
+        "emptyResponse": "Сервер не отправил ответ. Возможно, произошла ошибка.",
+        "networkError": "Ошибка сети — проверьте подключение к интернету!",
         "unknownError": "Произошла неизвестная ошибка. 😔",
         "errorLoad": "Файл не содержит допустимых данных!",
-        "invalidJson": "Неверный формат файла! Пожалуйста, убедитесь, что вы загрузили файл в формате JSON.",
-        "anotherFile": "Пожалуйста, попробуйте снова или выберите другой файл.",
-        "ru-RU": "Пожалуйста, разрешите доступ к хранилищу."
+        "invalidJson": "Недопустимый формат файла! Убедитесь, что вы загружаете файл в формате JSON.",
+        "anotherFile": "Попробуйте снова или выберите другой файл.",
+        "needPermission": "Пожалуйста, предоставьте разрешение на доступ к хранилищу."
     }
 }
