--- a/app/locales/ar-SA.json
+++ b/app/locales/ar-SA.json
@@ -1,75 +1,98 @@
 {
-    "pages": {
-        "index": {
-            "title": "رفع بياناتك"
-        }
-    },
     "components": {
         "chatInterface": {
-            "placeholder": "اكتب رسالتك..."
+            "placeholder": "أدخل رسالتك..."
+        },
+        "clickMenu": {
+            "showForm": "عرض نموذج إدخال البيانات",
+            "showChat": "عرض واجهة المحادثة"
         },
         "fileUpload": {
+            "title": "قم بتحميل بياناتك",
             "upload": "اختر ملفًا أو اسحبه هنا",
-            "lastLoaded": "تم التحميل آخر مرة"
+            "lastLoaded": "آخر تحميل"
         },
         "header": {
             "settings": "الإعدادات"
         },
         "optionalFields": {
-            "heartRate": "معدل ضربات القلب المتوسط",
-            "bloodPressure": "ضغط الدم (الانقباض/الانبساط)",
-            "sports": "الأنشطة الرياضية",
-            "medications": "الأدوية المنتظمة",
+            "heartRate": "معدل ضربات القلب",
+            "placeholderHeartRate": "أدخل معدل ضربات قلبك",
+            "bloodPressure": "ضغط الدم",
+            "placeholderBloodPressure": "أدخل ضغط دمك مثل 120/80",
+            "sports": "الرياضات",
+            "placeholderSports": "ما هي الرياضات التي تمارسها؟",
+            "medications": "الأدوية",
+            "placeholderMedications": "أدخل الأدوية التي تتناولها",
             "chronicDiseases": "الأمراض المزمنة",
+            "placeholderChronicDiseases": "أدخل الأمراض المزمنة التي تعاني منها",
             "allergies": "الحساسيات",
-            "diet": "العادات الغذائية",
-            "waterIntake": "استهلاك المياه اليومي (لتر)",
+            "placeholderAllergies": "أدخل الحساسيات لديك",
+            "diet": "النظام الغذائي",
+            "placeholderDiet": "أدخل النظام الغذائي المتبع",
+            "waterIntake": "استهلاك الماء يوميًا (لتر)",
+            "placeholderWaterIntake": "أدخل كمية الماء اليومية",
             "familyHistory": "التاريخ الطبي العائلي",
+            "placeholderFamilyHistory": "أدخل التاريخ الطبي لعائلتك",
             "smoking": "التدخين",
-            "alcohol": "استهلاك الكحول",
-            "sleep": "مدة النوم اليومية (ساعات)",
-            "medicalRecords": "الشكوى / الأعراض",
-            "medicalHistory": "التاريخ الطبي",
             "smokingOptions": {
                 "never": "أبدًا",
                 "occasionally": "أحيانًا",
-                "regularly": "بانتظام"
+                "regularly": "بشكل منتظم"
             },
+            "selectPlaceholder": "اختر",
+            "alcohol": "استهلاك الكحول",
             "alcoholOptions": {
                 "never": "أبدًا",
                 "occasionally": "أحيانًا",
-                "regularly": "بانتظام"
+                "regularly": "بشكل منتظم"
             },
-            "selectPlaceholder": "لم يتم توفيره",
-            "placeholderHeartRate": "مثل: 72",
-            "placeholderBloodPressure": "مثل: 120/80",
-            "placeholderSports": "مثل: الجري، السباحة، الصالة الرياضية",
-            "placeholderMedications": "مثل: أسبرين، ليفوثيروكسين",
-            "placeholderChronicDiseases": "مثل: السكري",
-            "placeholderAllergies": "مثل: البنسلين، حبوب اللقاح",
-            "placeholderDiet": "مثل: نباتي، كيتو",
-            "placeholderWaterIntake": "مثل: 2.5",
-            "placeholderFamilyHistory": "مثل: أمراض القلب",
-            "placeholderSleep": "مثل: 7.5",
-            "placeholderMedicalRecords": "مثل: الصداع المتكرر",
-            "placeholderMedicalHistory": "الأمراض السابقة"
+            "sleep": "النوم (ساعات/يوم)",
+            "placeholderSleep": "أدخل عدد ساعات نومك اليومية",
+            "physicalActivityLevel": "مستوى النشاط البدني",
+            "placeholderPhysicalActivityLevel": "أدخل مستوى نشاطك البدني",
+            "workType": "نوع العمل",
+            "placeholderWorkType": "أدخل نوع عملك",
+            "stressLevel": "مستوى التوتر",
+            "placeholderStressLevel": "أدخل مستوى التوتر لديك",
+            "mentalHealth": "الصحة النفسية",
+            "placeholderMentalHealth": "أدخل حالتك النفسية",
+            "cholesterolLevel": "مستوى الكوليسترول",
+            "placeholderCholesterolLevel": "أدخل مستوى الكوليسترول لديك",
+            "bloodSugarLevel": "مستوى السكر في الدم",
+            "placeholderBloodSugarLevel": "أدخل مستوى السكر في دمك",
+            "supplements": "المكملات الغذائية",
+            "placeholderSupplements": "أدخل المكملات الغذائية التي تتناولها",
+            "vaccinations": "التطعيمات",
+            "placeholderVaccinations": "أدخل التطعيمات التي حصلت عليها",
+            "reproductiveHealth": "الصحة الإنجابية",
+            "placeholderReproductiveHealth": "أدخل معلومات الصحة الإنجابية الخاصة بك",
+            "visionAndHearing": "البصر والسمع",
+            "placeholderVisionAndHearing": "أدخل مشكلات البصر والسمع لديك",
+            "sleepQuality": "جودة النوم",
+            "placeholderSleepQuality": "أدخل جودة نومك",
+            "medicalRecords": "السجلات الطبية",
+            "placeholderMedicalRecords": "أدخل سجلاتك الطبية",
+            "medicalHistory": "السجل الطبي",
+            "placeholderMedicalHistory": "أدخل الأمراض السابقة التي أصبت بها"
         },
         "privacyModal": {
-            "title": "سياسة الخصوصية",
-            "text1": "سيتم استخدام البيانات التي تقدمها فقط من قبل نظام الاستشارة الصحية ولن يتم مشاركتها مع أطراف ثالثة. لا يتم تخزين بياناتك؛ يمكنك إدارتها وحفظها على جهازك الشخصي.",
-            "text2": "من خلال قبول شروط الخصوصية، فإنك توافق على أن يقدم نظامنا نصائح استنادًا إلى المعلومات التي قدمتها."
+            "title": "سياسة الخصوصية الخاصة بنا",
+            "text1": "يتم استخدام البيانات التي تقدمها فقط بواسطة نظام الاستشارات الصحية، ولن يتم مشاركتها مع أطراف ثالثة. لا يتم تخزين بياناتك في النظام، ويمكنك التحكم بها وحفظها على جهازك الخاص.",
+            "text2": "بقبول شروط الخصوصية، فإنك توافق على استخدام المعلومات التي تقدمها للحصول على استشارات."
         },
         "response": {
-            "title": "رد الدكتور سانوفيز:",
-            "analyzing": "جاري تحليل البيانات 📚🧠",
+            "title": "رد الدكتور سانوفايز:",
+            "analyzing": "جارٍ تحليل البيانات 📚🧠",
             "thinking": "أفكر 🤔"
         },
         "settingsModal": {
             "title": "الإعدادات",
-            "text": "اختر اللغة المفضلة لديك:"
+            "selectLanguage": "اختر اللغة المطلوبة:",
+            "selectAIModel": "اختر نموذج الذكاء الاصطناعي:"
         },
         "userForm": {
-            "requiredInfo": "الحقول التي تحمل علامة <span class='required'>*</span> إلزامية!",
+            "requiredInfo": "الحقول التي تحتوي على <span class='required'>*</span> مطلوبة!",
             "birthDate": "تاريخ الميلاد",
             "gender": "الجنس",
             "selectGender": "اختر الجنس",
@@ -77,35 +100,35 @@
             "female": "أنثى",
             "height": "الطول",
             "weight": "الوزن",
-            "placeholderHeight": "مثل: 175",
-            "placeholderWeight": "مثل: 70",
-            "showExtra": "إظهار حقول إضافية",
-            "hideExtra": "إخفاء الحقول الإضافية",
+            "placeholderHeight": "مثال: 175",
+            "placeholderWeight": "مثال: 70",
+            "showExtra": "عرض المزيد من المعلومات",
+            "hideExtra": "إخفاء المزيد من المعلومات",
             "acceptPrivacy": "أوافق على",
             "privacyLink": "سياسة الخصوصية",
             "submitData": "إرسال البيانات",
-            "abort": "لا تجب",
+            "abort": "إيقاف الإجابة",
             "exportData": "تصدير البيانات",
-            "invalidHeight": "يجب أن يكون الطول بين 50 سم و 300 سم.",
-            "invalidWeight": "يجب أن يكون الوزن بين 1 كجم و 500 كجم.",
-            "invalidWaterIntake": "يجب أن يكون استهلاك المياه اليومي بين 0 و 50 لترًا.",
-            "invalidHeartRate": "يجب أن يكون معدل ضربات القلب بين 30 و 250.",
-            "invalidSleep": "يجب أن تكون مدة النوم بين 0 و 24 ساعة.",
-            "invalidBloodPressure": "يجب أن يكون ضغط الدم بتنسيق: الانقباض/الانبساط (مثل: 120/80)."
+            "invalidHeight": "يجب أن يتراوح الطول بين 50 سم و300 سم.",
+            "invalidWeight": "يجب أن يتراوح الوزن بين 1 كجم و500 كجم.",
+            "invalidWaterIntake": "يجب أن يكون استهلاك الماء اليومي بين 0 و50 لترًا.",
+            "invalidHeartRate": "يجب أن يتراوح معدل ضربات القلب بين 30 و250.",
+            "invalidSleep": "يجب أن يتراوح وقت النوم بين 0 و24 ساعة.",
+            "invalidBloodPressure": "يجب أن يكون ضغط الدم بالشكل التالي: الانقباضي/الانبساطي (مثال: 120/80)."
         }
     },
     "global": {
         "successSave": "تم الحفظ بنجاح",
-        "successShare": "تمت المشاركة بنجاح",
+        "successShare": "تم الإرسال بنجاح",
         "errorSave": "حدث خطأ أثناء الحفظ.",
         "errorSend": "حدث خطأ أثناء إرسال البيانات",
         "tryAgain": "يرجى المحاولة مرة أخرى لاحقًا أو تحديث الصفحة.",
-        "emptyResponse": "لم يرسل الخادم أي رد. ربما حدث شيء خاطئ.",
-        "networkError": "خطأ في الشبكة - يرجى التحقق من اتصالك بالإنترنت!",
+        "emptyResponse": "لم يتم استلام رد من الخادم. ربما حدث انقطاع.",
+        "networkError": "خطأ في الشبكة - تحقق من اتصال الإنترنت!",
         "unknownError": "حدث خطأ غير معروف. 😔",
-        "errorLoad": "لا يحتوي الملف على بيانات صالحة!",
-        "invalidJson": "تنسيق الملف غير صالح! يرجى التأكد من أنك قد قمت بتحميل ملف JSON.",
-        "anotherFile": "يرجى المحاولة مرة أخرى أو اختيار ملف مختلف.",
-        "ar-SA": "يرجى السماح بالوصول إلى وحدة التخزين."
+        "errorLoad": "الملف لا يحتوي على بيانات صالحة!",
+        "invalidJson": "تنسيق الملف غير صحيح! تأكد من أنك قمت بتحميل ملف JSON.",
+        "anotherFile": "حاول مرة أخرى أو اختر ملفًا آخر.",
+        "needPermission": "يرجى منح إذن الوصول إلى التخزين."
     }
 }
