--- a/app/locales/es-ES.json
+++ b/app/locales/es-ES.json
@@ -1,63 +1,85 @@
 {
-    "pages": {
-        "index": {
-            "title": "Sube tus datos"
-        }
-    },
     "components": {
         "chatInterface": {
             "placeholder": "Escribe tu mensaje..."
         },
+        "clickMenu": {
+            "showForm": "Mostrar formulario de entrada de datos",
+            "showChat": "Mostrar interfaz de chat"
+        },
         "fileUpload": {
-            "upload": "Selecciona un archivo o arrástralo aquí",
+            "title": "Sube tus datos",
+            "upload": "Elige un archivo o arrástralo aquí",
             "lastLoaded": "Última carga"
         },
         "header": {
-            "settings": "Configuraciones"
+            "settings": "Configuración"
         },
         "optionalFields": {
-            "heartRate": "Frecuencia cardiaca promedio",
-            "bloodPressure": "Presión arterial (sistólica/diastólica)",
-            "sports": "Actividades deportivas",
-            "medications": "Medicamentos regulares",
+            "heartRate": "Frecuencia cardíaca",
+            "placeholderHeartRate": "Introduce tu frecuencia cardíaca",
+            "bloodPressure": "Presión arterial",
+            "placeholderBloodPressure": "Introduce tu presión arterial, por ejemplo, 120/80",
+            "sports": "Deportes",
+            "placeholderSports": "¿Qué deportes practicas?",
+            "medications": "Medicamentos",
+            "placeholderMedications": "Introduce tus medicamentos",
             "chronicDiseases": "Enfermedades crónicas",
+            "placeholderChronicDiseases": "Introduce tus enfermedades crónicas",
             "allergies": "Alergias",
-            "diet": "Hábitos alimenticios",
-            "waterIntake": "Ingesta diaria de agua (litros)",
-            "familyHistory": "Historia médica familiar",
+            "placeholderAllergies": "Introduce tus alergias",
+            "diet": "Dieta",
+            "placeholderDiet": "Introduce tu dieta",
+            "waterIntake": "Consumo diario de agua (litros)",
+            "placeholderWaterIntake": "Introduce tu consumo diario de agua",
+            "familyHistory": "Historial médico familiar",
+            "placeholderFamilyHistory": "Introduce el historial médico de tu familia",
             "smoking": "Tabaquismo",
-            "alcohol": "Consumo de alcohol",
-            "sleep": "Duración diaria del sueño (horas)",
-            "medicalRecords": "Quejas / Síntomas",
-            "medicalHistory": "Historial médico",
             "smokingOptions": {
                 "never": "Nunca",
                 "occasionally": "Ocasionalmente",
                 "regularly": "Regularmente"
             },
+            "selectPlaceholder": "Seleccionar",
+            "alcohol": "Consumo de alcohol",
             "alcoholOptions": {
                 "never": "Nunca",
                 "occasionally": "Ocasionalmente",
                 "regularly": "Regularmente"
             },
-            "selectPlaceholder": "No proporcionado",
-            "placeholderHeartRate": "ej.: 72",
-            "placeholderBloodPressure": "ej.: 120/80",
-            "placeholderSports": "ej.: correr, nadar, gimnasio",
-            "placeholderMedications": "ej.: Aspirina, L-tiroxina",
-            "placeholderChronicDiseases": "ej.: diabetes",
-            "placeholderAllergies": "ej.: penicilina, polen",
-            "placeholderDiet": "ej.: vegetariano, keto",
-            "placeholderWaterIntake": "ej.: 2.5",
-            "placeholderFamilyHistory": "ej.: enfermedades cardíacas",
-            "placeholderSleep": "ej.: 7.5",
-            "placeholderMedicalRecords": "ej.: dolores de cabeza frecuentes",
-            "placeholderMedicalHistory": "Enfermedades anteriores"
+            "sleep": "Sueño (horas/día)",
+            "placeholderSleep": "Introduce tus horas de sueño diarias",
+            "physicalActivityLevel": "Nivel de actividad física",
+            "placeholderPhysicalActivityLevel": "Introduce tu nivel de actividad",
+            "workType": "Tipo de trabajo",
+            "placeholderWorkType": "Introduce tu tipo de trabajo",
+            "stressLevel": "Nivel de estrés",
+            "placeholderStressLevel": "Introduce tu nivel de estrés",
+            "mentalHealth": "Salud mental",
+            "placeholderMentalHealth": "Introduce tu estado mental",
+            "cholesterolLevel": "Nivel de colesterol",
+            "placeholderCholesterolLevel": "Introduce tu nivel de colesterol",
+            "bloodSugarLevel": "Nivel de azúcar en sangre",
+            "placeholderBloodSugarLevel": "Introduce tu nivel de azúcar en sangre",
+            "supplements": "Suplementos",
+            "placeholderSupplements": "Introduce tus suplementos",
+            "vaccinations": "Vacunas",
+            "placeholderVaccinations": "Introduce tus vacunas",
+            "reproductiveHealth": "Salud reproductiva",
+            "placeholderReproductiveHealth": "Introduce tu salud reproductiva",
+            "visionAndHearing": "Visión y audición",
+            "placeholderVisionAndHearing": "Introduce tus problemas de visión y audición",
+            "sleepQuality": "Calidad del sueño",
+            "placeholderSleepQuality": "Introduce la calidad de tu sueño",
+            "medicalRecords": "Registros médicos",
+            "placeholderMedicalRecords": "Introduce tus registros médicos",
+            "medicalHistory": "Historial médico",
+            "placeholderMedicalHistory": "Introduce tus enfermedades anteriores"
         },
         "privacyModal": {
-            "title": "Nuestra política de privacidad",
-            "text1": "Los datos que proporciones solo serán utilizados por el sistema de asesoramiento de salud y no serán compartidos con terceros. Tus datos no se almacenan; puedes gestionarlos y guardarlos en tu propio dispositivo.",
-            "text2": "Al aceptar los términos de privacidad, aceptas que nuestro sistema pueda ofrecerte consejos basados en la información que proporcionaste."
+            "title": "Nuestra Política de Privacidad",
+            "text1": "Los datos que proporciones serán utilizados únicamente por el sistema de asesoramiento de salud y no serán compartidos con terceros. Tus datos no se almacenarán; podrás gestionarlos y guardarlos en tu propio dispositivo.",
+            "text2": "Al aceptar las condiciones de privacidad, consientes que nuestro sistema te brinde consejos basados en la información proporcionada."
         },
         "response": {
             "title": "Respuesta de Dr. Sanovise:",
@@ -65,47 +87,48 @@
             "thinking": "Pensando 🤔"
         },
         "settingsModal": {
-            "title": "Configuraciones",
-            "text": "Elige tu idioma preferido:"
+            "title": "Configuración",
+            "selectLanguage": "Selecciona tu idioma preferido:",
+            "selectAIModel": "Selecciona el modelo de IA preferido:"
         },
         "userForm": {
             "requiredInfo": "¡Los campos marcados con <span class='required'>*</span> son obligatorios!",
             "birthDate": "Fecha de nacimiento",
             "gender": "Género",
-            "selectGender": "Selecciona el género",
-            "male": "Masculino",
-            "female": "Femenino",
+            "selectGender": "Seleccionar género",
+            "male": "Hombre",
+            "female": "Mujer",
             "height": "Altura",
             "weight": "Peso",
             "placeholderHeight": "ej.: 175",
             "placeholderWeight": "ej.: 70",
-            "showExtra": "Mostrar más campos",
-            "hideExtra": "Ocultar campos adicionales",
+            "showExtra": "Proporcionar datos adicionales",
+            "hideExtra": "Ocultar datos adicionales",
             "acceptPrivacy": "Acepto la",
             "privacyLink": "política de privacidad",
             "submitData": "Enviar datos",
-            "abort": "No responder",
+            "abort": "Cancelar respuesta",
             "exportData": "Exportar datos",
             "invalidHeight": "La altura debe estar entre 50 cm y 300 cm.",
             "invalidWeight": "El peso debe estar entre 1 kg y 500 kg.",
-            "invalidWaterIntake": "La ingesta diaria de agua debe estar entre 0 y 50 litros.",
-            "invalidHeartRate": "La frecuencia cardiaca debe estar entre 30 y 250 latidos por minuto.",
-            "invalidSleep": "La duración del sueño debe estar entre 0 y 24 horas.",
-            "invalidBloodPressure": "La presión arterial debe estar en el formato sistólica/diastólica (ej.: 120/80)."
+            "invalidWaterIntake": "El consumo diario de agua debe estar entre 0 y 50 litros.",
+            "invalidHeartRate": "La frecuencia cardíaca debe estar entre 30 y 250.",
+            "invalidSleep": "Las horas de sueño deben estar entre 0 y 24.",
+            "invalidBloodPressure": "La presión arterial debe tener el formato sistólica/diastólica (ej.: 120/80)."
         }
     },
     "global": {
-        "successSave": "Guardado correctamente",
-        "successShare": "Compartido con éxito",
+        "successSave": "Guardado exitosamente",
+        "successShare": "Enviado exitosamente",
         "errorSave": "Ocurrió un error al guardar.",
-        "errorSend": "Ocurrió un error al enviar los datos",
-        "tryAgain": "Por favor, intenta nuevamente más tarde o actualiza la página.",
-        "emptyResponse": "El servidor no devolvió una respuesta. Puede que algo haya fallado.",
+        "errorSend": "Ocurrió un error al enviar los datos.",
+        "tryAgain": "Por favor, inténtalo de nuevo más tarde o actualiza la página.",
+        "emptyResponse": "El servidor no envió respuesta. Algo pudo haber fallado.",
         "networkError": "Error de red – ¡verifica tu conexión a internet!",
         "unknownError": "Ocurrió un error desconocido. 😔",
         "errorLoad": "¡El archivo no contiene datos válidos!",
         "invalidJson": "¡Formato de archivo inválido! Asegúrate de que hayas subido un archivo JSON.",
-        "anotherFile": "Por favor, intenta nuevamente o selecciona otro archivo.",
-        "es-ES": "Por favor, permite el acceso al almacenamiento."
+        "anotherFile": "Por favor, inténtalo de nuevo o elige otro archivo.",
+        "needPermission": "Por favor, permite el acceso al almacenamiento."
     }
 }
